# firmwared

./: .gitignore  .travis.yml  Makefile.am  README  TESTING  configure.ac
src/: firmware.c  firmware.h  firmwared.c  firmwared.h  log-util.h  manager.c  manager.h  test-basic.c  test-build.sh
tools/: config  firmware-tester.c  test-runner.c  test_runner_kernel_config  tester.c  tester.h  util.c  util.h
